--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ db.password: root
 # Hibernate
 hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql: false
-hibernate.hbm2ddl.auto: update
+#hibernate.hbm2ddl.auto: update
 entitymanager.packagesToScan: com
 
 
